# haven-player

./: .gitignore  ACTUAL_FIX_VideoStream_maxsize.md  COMPLETE_SOLUTION_SUMMARY.md  CONFIGURATION_FIX.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_ISSUE_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DIRECT_WRITE_IMPLEMENTATION.md  FINAL_FIX_auto_subscribe.md  FINAL_IMPLEMENTATION.md  HOTFIX_NOTES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_VERIFICATION.md  LIVEKIT_BUFFER_OVERFLOW_FIX.md  PERFORMANCE_FIXES_APPLIED.md  PERFORMANCE_PROFILING_ADDED.md  README.md  REAL_SOLUTION_PROCESSING_SPEED.md  RESEARCH_PROMPT.md  ROOT_CAUSE_9GB_MEMORY.md  TEST_NOW.md  THE_REAL_ROOT_CAUSE.md  URGENT_FIX_SUMMARY.md  VLM_INTEGRATION_README.md  WEBRTC_RECORDING_IMPLEMENTATION.md  database.py  main.py  requirements.txt  sidebar.py  svg_icons.py  top_bar.py  utils.py  verify_fixes.sh  verify_setup.py  video_entry.py  video_player.py
backend/: AIORTCRECORDING_README.md  EXPERIMENT_GUIDE.md  EXPERIMENT_RESULTS.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LIVEKIT_INTEGRATION_README.md  NVDEC_FIX.md  PTS_DTS_FIX_DOCUMENTATION.md  PUMP_FUN_INTEGRATION_GUIDE.md  README.md  RECORDING_IMPLEMENTATION.md  SHARED_STREAM_MANAGEMENT_README.md  START_SERVER.sh  disable_nvdec.py  fix_zombie_recordings.py  migrate_add_filecoin_fields.py  requirements.txt  run_tests.py  setup.py  setup_and_test.py  test_ai_processing.py  test_aiortc_recording.py  test_cleanup.py  (+8 more)
backend/app/api/videophash_generator/: README.md  pyproject.toml
backend/app/api/videophash_generator/phash_generator/: phash_calculator.py
(+184 files in other folders)
